Sat Sep  4 21:55:52 CEST 2010
	Digest authentication now seems to be working. -CG/AA

Wed Sep  1 13:59:16 CEST 2010
	Added ability to specify external unescape function.
	"microhttpd.h" now includes the right headers for GNU/Linux
	systems unless MHD_PLATFORM_H is defined (in which case it
	is assumed that the right headers were already determined by
	some configure-like process). -CG

Tue Aug 31 15:39:25 CEST 2010
	Fixed bug with missing call to response cleanup in case of
	connection handling error (for example, after getting a SIGPIPE). -CG

Tue Aug 24 11:39:25 CEST 2010
	Fixed bug in handling EAGAIN from GnuTLS (caused
	needlessly dropped SSL connections). -CG

Sun Aug 22 16:49:13 CEST 2010
	Initial draft for digest authentication. -AA

Thu Aug 19 14:15:01 CEST 2010
	Changed code to enable error messages and HTTPS by default;
	added option to disable post processor API (use
	breaks binary compatibility, should only be done
	for embedded systems that require minimal footprint). -CG

Thu Aug 19 13:26:00 CEST 2010
	Patches for Windows to ease compilation trouble. -GT/CG

Sat Aug 14 15:43:30 CEST 2010
	Fixed small, largely hypothetical leaks.
	Reduced calls to strlen for header processing. -CG

Fri Aug  6 12:51:59 CEST 2010
	Fixing (small) memory leak on daemon-shutdown with
	SSL enabled. -CG/PG

Thu Aug  5 22:24:37 CEST 2010
	Fixing timeout bug on systems that think it's still
	1970 (can happen if system time not initialized). -CG

Mon Jul 26 10:46:57 CEST 2010
	Releasing libmicrohttpd 0.9.0. -CG

Sun Jul 25 14:57:47 CEST 2010
	Adding support for sendfile on Linux.  Adding support
	for systemd-style passing of an existing listen socket
	as an option.  IPv6 sockets now only bind to IPv6
	(if platform supports this). -CG

Sun Jul 25 11:10:45 CEST 2010
	Changed code to use external libgnutls code instead of
	the "fork".  Minor API changes for setting TLS options. -CG

Sun Jun 13 10:52:34 CEST 2010
	Cleaned up example code. -CG

Fri Apr 23 09:56:37 CEST 2010